[package]
name = "rust_examples"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2018"


[[bin]]
name = "future_world"
path = "src/future_world/bin/main.rs"

[[bin]]
name = "async_webserver"
path = "src/async_webserver/bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
